@@ -67,11 +67,6 @@ char	*stpcpy(char *, const char *);
 #define MAXFILE 128
 #define MAXEXT  128
 #define O_BINARY 0
-#define PATH_SEP '/'
-#define DELIMITER   ':'
-#else
-#define PATH_SEP '\\'
-#define DELIMITER   ';'
 #endif
 
 #ifndef	max
